--- a/men.html
+++ b/men.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Men's Premium Watches – HIGH CHOICE</title>
+<title>Men's Collection – HIGH CHOICE</title>
+<link rel="icon" type="image/png" href="favicon.png">
 
 <style>
     :root {
@@ -11,157 +12,242 @@
         --card: rgba(255,255,255,0.06);
         --text: #ffffff;
         --muted: #c1c1d2;
-        --primary: #b792ff;
-        --primary-dark: #8d63ff;
+        --accent: #b792ff;
     }
 
     body {
-        margin: 0; background: var(--bg); color: var(--text);
+        margin: 0;
+        background: var(--bg);
+        color: var(--text);
         font-family: 'Poppins', sans-serif;
-        overflow-x: hidden;
     }
 
-    /* HEADER */
     header {
         padding: 14px 20px;
-        display: flex; justify-content: space-between; align-items: center;
         background: rgba(0,0,0,0.35);
         backdrop-filter: blur(10px);
-        position: sticky; top: 0; z-index: 999;
-    }
-    .logo { font-size: 20px; font-weight: 700; color: var(--primary); }
-    .menu-btn {
-        width: 40px; height: 40px; background: rgba(255,255,255,0.08);
-        border-radius: 8px; display: flex; justify-content: center;
-        align-items: center; font-size: 20px; cursor: pointer;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        position: sticky;
+        top: 0;
+        z-index: 999;
+        border-bottom: 1px solid rgba(255,255,255,0.05);
     }
 
-    /* TITLE */
-    .page-title {
-        padding: 25px 20px 10px 20px;
+    .logo {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+    }
+
+    .logo img {
+        height: 36px;
+    }
+
+    .logo span {
+        font-size: 20px;
+        font-weight: 700;
+        color: var(--accent);
+    }
+
+    .menu-btn {
+        width: 40px;
+        height: 40px;
+        background: rgba(255,255,255,0.08);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 8px;
+        cursor: pointer;
+        font-size: 22px;
+    }
+
+    /* Drawer */
+    #drawer {
+        position: fixed;
+        right: -100%;
+        top: 0;
+        width: 70%;
+        max-width: 300px;
+        height: 100%;
+        background: #070b12;
+        padding: 25px;
+        transition: 0.4s;
+        z-index: 900;
+    }
+
+    #drawer.open {
+        right: 0;
+    }
+
+    #drawer a {
+        display: block;
+        padding: 12px 4px;
+        border-bottom: 1px solid rgba(255,255,255,0.08);
+        color: var(--text);
+        margin-bottom: 8px;
+        font-weight: 600;
+    }
+
+    /* Page Title */
+    .title {
         text-align: center;
         font-size: 26px;
-        font-weight: bold;
-    }
-    .subtitle {
-        text-align: center; margin-top: -10px;
-        color: var(--muted); font-size: 14px;
+        font-weight: 700;
+        margin-top: 25px;
+        color: var(--accent);
     }
 
-    /* BRAND GRID */
-    .brand-grid {
+    .subtitle {
+        text-align: center;
+        color: var(--muted);
+        margin-bottom: 20px;
+    }
+
+    /* Brand Grid */
+    .grid {
         padding: 20px;
         display: grid;
         grid-template-columns: 1fr;
-        gap: 18px;
+        gap: 20px;
     }
 
-    @media (min-width: 600px) {
-        .brand-grid { grid-template-columns: 1fr 1fr; }
-    }
-    @media (min-width: 900px) {
-        .brand-grid { grid-template-columns: 1fr 1fr 1fr; }
+    @media (min-width: 700px) {
+        .grid { grid-template-columns: 1fr 1fr; }
     }
 
-    .brand-card {
+    @media (min-width: 1100px) {
+        .grid { grid-template-columns: 1fr 1fr 1fr; }
+    }
+
+    .card {
         background: var(--card);
-        border-radius: 16px;
-        padding: 16px;
-        border: 1px solid rgba(255,255,255,0.1);
+        padding: 12px;
+        border-radius: 14px;
+        border: 1px solid rgba(255,255,255,0.08);
         cursor: pointer;
         transition: 0.25s;
         text-align: center;
     }
-    .brand-card img {
-        width: 100%; height: 150px; object-fit: cover;
-        border-radius: 12px;
+
+    .card:hover {
+        transform: scale(1.04);
+        border-color: var(--accent);
     }
-    .brand-card h3 {
-        margin-top: 12px; font-size: 17px;
+
+    .card img {
+        width: 100%;
+        height: 150px;
+        object-fit: cover;
+        border-radius: 10px;
     }
-    .brand-card:hover {
-        transform: scale(1.05);
-        border-color: var(--primary-dark);
+
+    .card h4 {
+        margin-top: 10px;
+        font-size: 16px;
+        font-weight: 600;
+        color: var(--text);
     }
 
     footer {
-        padding: 15px; text-align: center; color: var(--muted); font-size: 13px;
+        text-align: center;
+        color: var(--muted);
+        padding: 25px;
+        margin-top: 25px;
     }
 </style>
-</head>
 
+</head>
 <body>
 
 <header>
-    <div class="logo">HIGH CHOICE</div>
-    <div class="menu-btn" onclick="location.href='index.html'">☰</div>
+    <div class="logo">
+        <img src="highchoice_logo.png" alt="High Choice">
+        <span>HIGH CHOICE</span>
+    </div>
+    <div class="menu-btn" onclick="toggleMenu()">☰</div>
 </header>
 
-<div class="page-title">Men's Watch Brands</div>
-<div class="subtitle">Premium men’s luxury collections</div>
+<nav id="drawer">
+    <a href="index.html">Home</a>
+    <a href="men.html">Men</a>
+    <a href="women.html">Women</a>
+    <a href="kids.html">Kids</a>
+    <a href="about.html">About</a>
+    <a href="contact.html">Contact</a>
+    <a href="return.html">Return & Replace</a>
+</nav>
 
-<section class="brand-grid">
+<script>
+function toggleMenu() {
+    document.getElementById("drawer").classList.toggle("open");
+}
+</script>
 
-    <div class="brand-card" onclick="location.href='rolex.html'">
-        <img src="images/men/rolex.jpg">
-        <h3>Rolex</h3>
-    </div>
+<div class="title">Men's Luxury Brands</div>
+<div class="subtitle">Select a brand to view all models</div>
 
-    <div class="brand-card" onclick="location.href='omega.html'">
-        <img src="images/men/omega.jpg">
-        <h3>Omega</h3>
-    </div>
+<section class="grid">
 
-    <div class="brand-card" onclick="location.href='maserati.html'">
-        <img src="images/men/maserati.jpg">
-        <h3>Maserati</h3>
-    </div>
+    <a class="card" href="rolex.html">
+        <img src="rolex.jpg">
+        <h4>Rolex</h4>
+    </a>
 
-    <div class="brand-card" onclick="location.href='armani.html'">
-        <img src="images/men/armani.jpg">
-        <h3>Armani</h3>
-    </div>
+    <a class="card" href="omega.html">
+        <img src="omega.jpg">
+        <h4>Omega</h4>
+    </a>
 
-    <div class="brand-card" onclick="location.href='gshock.html'">
-        <img src="images/men/gshock.jpg">
-        <h3>G-Shock</h3>
-    </div>
+    <a class="card" href="maserati.html">
+        <img src="maserati.jpg">
+        <h4>Maserati</h4>
+    </a>
 
-    <div class="brand-card" onclick="location.href='rado.html'">
-        <img src="images/men/rado.jpg">
-        <h3>Rado</h3>
-    </div>
+    <a class="card" href="armani.html">
+        <img src="armani.jpg">
+        <h4>Armani</h4>
+    </a>
 
-    <div class="brand-card" onclick="location.href='longines.html'">
-        <img src="images/men/longines.jpg">
-        <h3>Longines</h3>
-    </div>
+    <a class="card" href="gshock.html">
+        <img src="gshock.jpg">
+        <h4>G-Shock</h4>
+    </a>
 
-    <div class="brand-card" onclick="location.href='cartier.html'">
-        <img src="images/men/cartier.jpg">
-        <h3>Cartier</h3>
-    </div>
+    <a class="card" href="tissot.html">
+        <img src="tissot.jpg">
+        <h4>Tissot</h4>
+    </a>
 
-    <div class="brand-card" onclick="location.href='tissot.html'">
-        <img src="images/men/tissot.jpg">
-        <h3>Tissot</h3>
-    </div>
+    <a class="card" href="rado.html">
+        <img src="rado.jpg">
+        <h4>Rado</h4>
+    </a>
 
-    <div class="brand-card" onclick="location.href='ap.html'">
-        <img src="images/men/ap.jpg">
-        <h3>Audemars Piguet</h3>
-    </div>
+    <a class="card" href="longines.html">
+        <img src="longines.jpg">
+        <h4>Longines</h4>
+    </a>
 
-    <div class="brand-card" onclick="location.href='patek.html'">
-        <img src="images/men/patek.jpg">
-        <h3>Patek Philippe</h3>
-    </div>
+    <a class="card" href="cartier.html">
+        <img src="cartier.jpg">
+        <h4>Cartier</h4>
+    </a>
+
+    <a class="card" href="ap.html">
+        <img src="ap.jpg">
+        <h4>Audemars Piguet</h4>
+    </a>
+
+    <a class="card" href="patek.html">
+        <img src="patek.jpg">
+        <h4>Patek Philippe</h4>
+    </a>
 
 </section>
 
-<footer>
-    © 2025 HIGH CHOICE — All Rights Reserved
-</footer>
+<footer>© 2025 HIGH CHOICE — All Rights Reserved</footer>
 
 </body>
 </html>
