--- a/women.html
+++ b/women.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Women's Premium Watches – HIGH CHOICE</title>
+<title>Women's Collection – HIGH CHOICE</title>
+<link rel="icon" type="image/png" href="favicon.png">
 
 <style>
     :root {
@@ -11,146 +12,230 @@
         --card: rgba(255,255,255,0.06);
         --text: #ffffff;
         --muted: #c1c1d2;
-        --primary: #ffafff;
-        --primary-dark: #d97bd9;
+        --accent: #ff9ad5;
     }
 
     body {
-        margin: 0; background: var(--bg); color: var(--text);
+        margin: 0;
+        background: var(--bg);
+        color: var(--text);
         font-family: 'Poppins', sans-serif;
-        overflow-x: hidden;
     }
 
-    /* HEADER */
     header {
         padding: 14px 20px;
-        display: flex; justify-content: space-between; align-items: center;
         background: rgba(0,0,0,0.35);
         backdrop-filter: blur(10px);
-        position: sticky; top: 0; z-index: 999;
-    }
-    .logo { font-size: 20px; font-weight: 700; color: var(--primary); }
-    .menu-btn {
-        width: 40px; height: 40px; background: rgba(255,255,255,0.08);
-        border-radius: 8px; display: flex; justify-content: center; align-items: center;
-        font-size: 20px; cursor: pointer;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        position: sticky;
+        top: 0;
+        z-index: 999;
+        border-bottom: 1px solid rgba(255,255,255,0.05);
     }
 
-    /* TITLE */
-    .page-title {
-        padding: 25px 20px 10px 20px;
+    .logo {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+    }
+
+    .logo img {
+        height: 36px;
+    }
+
+    .logo span {
+        font-size: 20px;
+        font-weight: 700;
+        color: var(--accent);
+    }
+
+    .menu-btn {
+        width: 40px;
+        height: 40px;
+        background: rgba(255,255,255,0.08);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 8px;
+        cursor: pointer;
+        font-size: 22px;
+    }
+
+    /* Drawer */
+    #drawer {
+        position: fixed;
+        right: -100%;
+        top: 0;
+        width: 70%;
+        max-width: 300px;
+        height: 100%;
+        background: #070b12;
+        padding: 25px;
+        transition: 0.4s;
+        z-index: 900;
+    }
+
+    #drawer.open {
+        right: 0;
+    }
+
+    #drawer a {
+        display: block;
+        padding: 12px 4px;
+        border-bottom: 1px solid rgba(255,255,255,0.08);
+        color: var(--text);
+        margin-bottom: 8px;
+        font-weight: 600;
+    }
+
+    .title {
         text-align: center;
         font-size: 26px;
-        font-weight: bold;
-    }
-    .subtitle {
-        text-align: center; margin-top: -10px;
-        color: var(--muted); font-size: 14px;
+        font-weight: 700;
+        margin-top: 25px;
+        color: var(--accent);
     }
 
-    /* BRAND GRID */
-    .brand-grid {
+    .subtitle {
+        text-align: center;
+        color: var(--muted);
+        margin-bottom: 20px;
+    }
+
+    .grid {
         padding: 20px;
         display: grid;
         grid-template-columns: 1fr;
-        gap: 18px;
-    }
-    @media (min-width: 600px) {
-        .brand-grid { grid-template-columns: 1fr 1fr; }
-    }
-    @media (min-width: 900px) {
-        .brand-grid { grid-template-columns: 1fr 1fr 1fr; }
+        gap: 20px;
     }
 
-    .brand-card {
+    @media (min-width: 700px) {
+        .grid { grid-template-columns: 1fr 1fr; }
+    }
+
+    @media (min-width: 1100px) {
+        .grid { grid-template-columns: 1fr 1fr 1fr; }
+    }
+
+    .card {
         background: var(--card);
-        border-radius: 16px;
-        padding: 16px;
-        border: 1px solid rgba(255,255,255,0.1);
+        padding: 12px;
+        border-radius: 14px;
+        border: 1px solid rgba(255,255,255,0.08);
         cursor: pointer;
         transition: 0.25s;
         text-align: center;
     }
-    .brand-card img {
-        width: 100%; height: 150px; object-fit: cover;
-        border-radius: 12px;
+
+    .card:hover {
+        transform: scale(1.04);
+        border-color: var(--accent);
     }
-    .brand-card h3 {
-        margin-top: 12px; font-size: 17px;
+
+    .card img {
+        width: 100%;
+        height: 150px;
+        object-fit: cover;
+        border-radius: 10px;
     }
-    .brand-card:hover {
-        transform: scale(1.05);
-        border-color: var(--primary-dark);
+
+    .card h4 {
+        margin-top: 10px;
+        font-size: 16px;
+        font-weight: 600;
+        color: var(--text);
     }
 
     footer {
-        padding: 15px; text-align: center; color: var(--muted); font-size: 13px;
+        text-align: center;
+        color: var(--muted);
+        padding: 25px;
+        margin-top: 25px;
     }
 </style>
-</head>
 
+</head>
 <body>
 
 <header>
-    <div class="logo">HIGH CHOICE</div>
-    <div class="menu-btn" onclick="location.href='index.html'">☰</div>
+    <div class="logo">
+        <img src="highchoice_logo.png" alt="High Choice">
+        <span>HIGH CHOICE</span>
+    </div>
+    <div class="menu-btn" onclick="toggleMenu()">☰</div>
 </header>
 
-<div class="page-title">Women's Watch Brands</div>
-<div class="subtitle">Exclusive luxury collections for women</div>
+<nav id="drawer">
+    <a href="index.html">Home</a>
+    <a href="men.html">Men</a>
+    <a href="women.html">Women</a>
+    <a href="kids.html">Kids</a>
+    <a href="about.html">About</a>
+    <a href="contact.html">Contact</a>
+    <a href="return.html">Return & Replace</a>
+</nav>
 
-<section class="brand-grid">
+<script>
+function toggleMenu() {
+    document.getElementById("drawer").classList.toggle("open");
+}
+</script>
 
-    <div class="brand-card" onclick="location.href='michaelkors.html'">
-        <img src="images/women/michaelkors.jpg">
-        <h3>Michael Kors</h3>
-    </div>
+<div class="title">Women's Luxury Brands</div>
+<div class="subtitle">Select a brand to view all models</div>
 
-    <div class="brand-card" onclick="location.href='cavalli.html'">
-        <img src="images/women/cavalli.jpg">
-        <h3>Just Cavalli</h3>
-    </div>
+<section class="grid">
 
-    <div class="brand-card" onclick="location.href='dior.html'">
-        <img src="images/women/dior.jpg">
-        <h3>Dior</h3>
-    </div>
+    <a class="card" href="michaelkors.html">
+        <img src="michaelkors.jpg">
+        <h4>Michael Kors</h4>
+    </a>
 
-    <div class="brand-card" onclick="location.href='baignoire.html'">
-        <img src="images/women/baignoire.jpg">
-        <h3>Cartier Baignoire</h3>
-    </div>
+    <a class="card" href="justcavalli.html">
+        <img src="justcavalli.jpg">
+        <h4>Just Cavalli</h4>
+    </a>
 
-    <div class="brand-card" onclick="location.href='armani_women.html'">
-        <img src="images/women/armani.jpg">
-        <h3>Armani Women</h3>
-    </div>
+    <a class="card" href="dior.html">
+        <img src="dior.jpg">
+        <h4>Dior</h4>
+    </a>
 
-    <div class="brand-card" onclick="location.href='ap_women.html'">
-        <img src="images/women/ap.jpg">
-        <h3>Audemars Piguet Women</h3>
-    </div>
+    <a class="card" href="cartier_baignoire.html">
+        <img src="cartier_baignoire.jpg">
+        <h4>Cartier Baignoire</h4>
+    </a>
 
-    <div class="brand-card" onclick="location.href='fossil.html'">
-        <img src="images/women/fossil.jpg">
-        <h3>Fossil Jacqueline</h3>
-    </div>
+    <a class="card" href="armani_women.html">
+        <img src="armani_women.jpg">
+        <h4>Armani Women</h4>
+    </a>
 
-    <div class="brand-card" onclick="location.href='omega_women.html'">
-        <img src="images/women/omega.jpg">
-        <h3>Omega Women</h3>
-    </div>
+    <a class="card" href="ap_women.html">
+        <img src="ap_women.jpg">
+        <h4>Audemars Piguet Women</h4>
+    </a>
 
-    <div class="brand-card" onclick="location.href='ck.html'">
-        <img src="images/women/ck.jpg">
-        <h3>Calvin Klein</h3>
-    </div>
+    <a class="card" href="fossil_jacqueline.html">
+        <img src="fossil_jacqueline.jpg">
+        <h4>Fossil Jacqueline</h4>
+    </a>
+
+    <a class="card" href="omega_women.html">
+        <img src="omega_women.jpg">
+        <h4>Omega Women</h4>
+    </a>
+
+    <a class="card" href="ck.html">
+        <img src="ck.jpg">
+        <h4>Calvin Klein</h4>
+    </a>
 
 </section>
 
-<footer>
-    © 2025 HIGH CHOICE — All Rights Reserved
-</footer>
+<footer>© 2025 HIGH CHOICE — All Rights Reserved</footer>
 
 </body>
 </html>
